2008-12-07 Sergey Sinkovskiy <glorybox.away@gmail.com>

	* added scaling
	* minor fixes
